RESOLVED FIXED191904
[GStreamer][WebRTC] Do not run device monitor for device type we do not handle
https://bugs.webkit.org/show_bug.cgi?id=191904
Summary [GStreamer][WebRTC] Do not run device monitor for device type we do not handle
Thibault Saunier
Reported 2018-11-22 05:00:05 PST
[GStreamer][WebRTC] Do not run device monitor for device type we do not handle
Attachments
Minor ChangeLog enhancement (1.82 KB, patch)
2018-11-22 05:00 PST, Thibault Saunier
no flags
Patch (2.00 KB, patch)
2018-11-27 12:08 PST, Thibault Saunier
no flags
Thibault Saunier
Comment 1 2018-11-22 05:00:42 PST
Created attachment 355468 [details] Minor ChangeLog enhancement
Philippe Normand
Comment 2 2018-11-22 06:10:57 PST
Comment on attachment 355468 [details] Minor ChangeLog enhancement View in context: https://bugs.webkit.org/attachment.cgi?id=355468&action=review > Source/WebCore/platform/mediastream/gstreamer/GStreamerCaptureDeviceManager.cpp:113 > + } else { > + return; > } The curly braces can be removed :) > Source/WebCore/platform/mediastream/gstreamer/GStreamerCaptureDeviceManager.cpp:-112 > - // FIXME: Add monitor for added/removed messages on the bus. Why is this removed? Doesn't need to be fixed?
Thibault Saunier
Comment 3 2018-11-27 12:06:56 PST
(In reply to Philippe Normand from comment #2) > Comment on attachment 355468 [details] > Minor ChangeLog enhancement > > View in context: > https://bugs.webkit.org/attachment.cgi?id=355468&action=review > > > Source/WebCore/platform/mediastream/gstreamer/GStreamerCaptureDeviceManager.cpp:113 > > + } else { > > + return; > > } > > The curly braces can be removed :) Done. > > Source/WebCore/platform/mediastream/gstreamer/GStreamerCaptureDeviceManager.cpp:-112 > > - // FIXME: Add monitor for added/removed messages on the bus. > > Why is this removed? Doesn't need to be fixed? Right, just moving it and forgot to commit the addition. Re added now.
Thibault Saunier
Comment 4 2018-11-27 12:08:12 PST
WebKit Commit Bot
Comment 5 2018-11-28 04:40:16 PST
Comment on attachment 355758 [details] Patch Clearing flags on attachment: 355758 Committed r238605: <https://trac.webkit.org/changeset/238605>
WebKit Commit Bot
Comment 6 2018-11-28 04:40:17 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2018-11-28 04:41:36 PST
Note You need to log in before you can comment on or make changes to this bug.